--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
-    <string name="app_name">P2-PopularMovies</string>
+    <string name="app_name">PopularMovies</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+
+    <string name="settings">Settings</string>
+    <string name="most_popular">Most Popular</string>
+    <string name="top_rated">Highest Rated</string>
+    <string name="date_format">yyyy-MM-dd</string>
+    <string name="movie_poster">Movie Poster</string>
+    <string name="message_not_connected">Unable to retrieve movie data, please make sure you are connected</string>
+    <string name="tmdb_image_base_path">http://image.tmdb.org/t/p/w342//</string>
 </resources>
