naming conventions - resource files

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,13 +3,12 @@
 
     <!-- TODO: Remove or change this placeholder text -->
 
-    <string name="settings">Settings</string>
-    <string name="most_popular">Most Popular</string>
-    <string name="top_rated">Highest Rated</string>
+    <string name="action_settings">Settings</string>
+    <string name="action_most_popular">Most Popular</string>
+    <string name="action_top_rated">Highest Rated</string>
     <string name="date_format">yyyy-MM-dd</string>
-    <string name="movie_poster">Movie Poster</string>
-    <string name="message_not_connected">Unable to retrieve movie data, please make sure you are connected</string>
+    <string name="detail_movie_poster">Movie Poster</string>
+    <string name="error_not_connected">Unable to retrieve movie data, please make sure you are connected</string>
     <string name="tmdb_image_base_path">http://image.tmdb.org/t/p/w342//</string>
-    <string name="title_placeholder">Title</string>
-    <string name="text_placeholder_trailer">Trailer</string>
+    <string name="detail_title_trailers">Trailers</string>
 </resources>
