--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,8 @@
     <string name="dateToYear"><xliff:g id="dateToYear">%1$tY</xliff:g></string>
 
     <string name="myDateFormat"><xliff:g id="myDateFormat">%1$td/%1$tm/%1$tY</xliff:g></string>
+
+    <string name="content_authority"><xliff:g id="contentAuthority">udacity.nanodegree.android.p2</xliff:g></string>
     
     
 </resources>
