--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,9 @@
 
 - acabar implementacao de ContentProvider
-    - implementar update
-    - implementar notify
-    - implementar bulk insert
+ok    - implementar update
+ok    - implementar notify
+    - implementar delete
+
 
 - parametrizar versoes de libs no build.gradle
 - padronizar nomes de classes e variaveis
