--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,8 @@
 
-- acabar implementacao de ContentProvider
+
 ok    - implementar update
 ok    - implementar notify
-    - implementar delete
+ ok   - implementar delete
 
 
 - parametrizar versoes de libs no build.gradle
