--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,7 @@
 
 
 - separar logica do MainActivity
-
+- remover campo _ID do banco
 ok    - implementar update
 ok    - implementar notify
  ok   - implementar delete
