--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,5 +43,6 @@
 
     <string name="content_authority"><xliff:g id="contentAuthority">udacity.nanodegree.android.p2</xliff:g></string>
     <string name="detail_title_user_reviews">User Reviews</string>
+    <string name="author">Author:</string>
 
 </resources>
