--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,4 @@
+- refatorar codigo usando code style da square
 - implementar MainActivity padrao (usando exemplo do curso)
 
 - /style/cores_item_review_layout : destacar o título, acertar o espaçamento.
