--- a/todo.txt
+++ b/todo.txt
@@ -1,32 +1,16 @@
-- recuperar opcao do menu e posicao quando rotacionar (MoviesFragment)
-- implementar MainActivity padrao (usando exemplo do curso)
+- bater especificação de tela com app
+- retirar checkbox do menu para simplificar
+- item review: destacar o titulo, acertar espaçamento.
+- adicionar estilos e temas
+- material design
+- inibir exibicacao de null qunado valor é carregado (detail)
+- otimizar recycler views (verificar se já instanciado)
+- testar em modo offline
+- parametrizar versoes das libs no build
+- refatorar nomes de classes e métodos
+- separar logica negocio main activity
 
-- /style/cores_item_review_layout : destacar o título, acertar o espaçamento.
-- /style/adicionar_estilos_e_temas :
-- /style/material_design : padronizar app com diretrizes do MD
 
-
-/fix/inibir_exibicao_de_null_enquanto_valor_nao_carregado
-:esta aparecendo null, antes de carregar informacoes no detail view.
-
-/fix/otimizar_recycler_views
-:reutilizar_views
-
-/fix/permitir_modo_offline
-:mostrar mensagem no backgraound da tela principal.
-:habilitar cache do volley
-:testar funcionamento offline
-:estudar técnicas para permitir o uso offline
-
-problema: quando houver outras opcoes de menu?
-
-/refac/parametrizar_versoes_libs_no_build
-
-/refac/rever_nome_classes_metodos
-: pensar melhor no nome de cada componente do sistema.
-
-/refac/separar_logica_negocio_main_activity
-: criar classes para armazenar logica do main activity
 
 -- pronto
 
@@ -39,5 +23,7 @@ problema: quando houver outras opcoes de menu?
 :mover para o item clicado anteriormente
 
 
-OK - /feat/mostrar_filmes_favoritos - criar menu item e estrutura para mostrar filmes marcados como favorito pelo usuario.
+- /feat/mostrar_filmes_favoritos - criar menu item e estrutura para mostrar filmes marcados como favorito pelo usuario.
 - refatorar codigo usando code style oficial android
+- recuperar opcao do menu e posicao quando rotacionar (MoviesFragment)
+- implementar MainActivity padrao (usando exemplo do curso)
