--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,9 @@
         </xliff:g>
     </string>
     <string name="detail_movie_poster">Movie Poster</string>
-    <string name="error_not_connected">Unable to retrieve movie data, please make sure you are connected</string>
+    <string name="error_not_connected">Unable to retrieve movie data, please make sure you are
+        connected
+    </string>
     <string name="tmdb_image_base_path">
         <xliff:g id="tmdb_base_url">
             http://image.tmdb.org/t/p/w342/%s
@@ -26,9 +28,15 @@
     </string>
 
     <string name="detail_title_trailers">Trailers</string>
-    <string name="max_rating"> <xliff:g id="rating">%1.1f</xliff:g>/10</string>
+    <string name="detail_fragment_title">Movie Detail</string>
 
-    <string name="min"><xliff:g id="min">%d</xliff:g> min</string>
+    <string name="max_rating"><xliff:g id="rating">%1.1f</xliff:g>/10
+    </string>
+
+    <string name="min">
+        <xliff:g id="min">%d</xliff:g>
+        min
+    </string>
 
     <string name="youtube_web">
         <xliff:g id="youtube_web">http://www.youtube.com/watch?v=%s</xliff:g>
@@ -36,13 +44,20 @@
     <string name="youtube_app">
         <xliff:g id="youtube_app">vnd.youtube:%s</xliff:g>
     </string>
-    
-    <string name="dateToYear"><xliff:g id="dateToYear">%1$tY</xliff:g></string>
 
-    <string name="myDateFormat"><xliff:g id="myDateFormat">%1$td/%1$tm/%1$tY</xliff:g></string>
+    <string name="dateToYear">
+        <xliff:g id="dateToYear">%1$tY</xliff:g>
+    </string>
 
-    <string name="content_authority"><xliff:g id="contentAuthority">udacity.nanodegree.android.p2</xliff:g></string>
+    <string name="myDateFormat">
+        <xliff:g id="myDateFormat">%1$td/%1$tm/%1$tY</xliff:g>
+    </string>
+
+    <string name="content_authority">
+        <xliff:g id="contentAuthority">udacity.nanodegree.android.p2</xliff:g>
+    </string>
     <string name="detail_title_user_reviews">User Reviews</string>
     <string name="author">Author:</string>
+
 
 </resources>
