--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="app_name">PopularMovies</string>
+    <string name="app_name">Popular Movies</string>
 
     <!-- TODO: Remove or change this placeholder text -->
 
@@ -28,7 +28,7 @@
     </string>
 
     <string name="detail_title_trailers">Trailers</string>
-    <string name="detail_fragment_title">Movie Detail</string>
+
 
     <string name="max_rating"><xliff:g id="rating">%1.1f</xliff:g>/10
     </string>
@@ -61,7 +61,8 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_detail">DetailActivity</string>
+    <string name="title_activity_detail">Movie Detail</string>
+    <string name="msg_movies_not_online">You are not online, showing favorite movies.</string>
 
 
 </resources>
