--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,10 +59,11 @@
     <string name="detail_title_user_reviews">User Reviews</string>
     <string name="author">Author:</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_detail">Movie Detail</string>
     <string name="msg_movies_not_online">You are not online, showing favorite movies.</string>
+    <string name="msg_movies_dont_have_favorite_movies_yet">You do not have any favorite movies
+        yet!
+    </string>
 
 
 </resources>
