--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,9 @@
     <!-- TODO: Remove or change this placeholder text -->
 
     <string name="action_settings">Settings</string>
-    <string name="action_most_popular">Most Popular</string>
-    <string name="action_top_rated">Highest Rated</string>
+    <string name="action_popular_movies">Most Popular</string>
+    <string name="action_top_rated_movies">Top Rated Movies</string>
+    <string name="action_favorite_movies">My Favorite Movies</string>
     <string name="date_format">
         <xliff:g id="date_format">
             yyyy-MM-dd
@@ -64,7 +65,7 @@
     <string name="msg_movies_dont_have_favorite_movies_yet">You do not have any favorite movies
         yet!
     </string>
-    <string name="my_favorite_movies">My Favorite Movies</string>
+
 
 
 </resources>
